fix: options on firefox

--- a/mainsite/static/mainsite/style.css
+++ b/mainsite/static/mainsite/style.css
@@ -3228,11 +3228,16 @@ main{
         -ms-flex-direction:column;
             flex-direction:column;
   }
+  .options__list{
+    flex-direction: row;
+    height: auto;
+  }
   .options__list, .options__item{
     width:100%;
   }
   .options__item{
     width:100%;
+    height: auto;
   }
   .options__sublist{
     padding-left:5rem;
